--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,16 +4,16 @@ Html
 <html lang="mk">
 <head>
   <meta charset="UTF-8">
-  <title>Rosy Quality Centar 
+  <title>Rosy Quality Centar &#127800;  
   </title>
   </head>
   <body style="text-align: center;
     background-color: #fff6fb;
     font-family: sans-serif;">
-       <h1> Добредојде во Rosy Quality Center </h1>
+       <h1> Добредојде во Rosy Quality Center &#127800; </h1>
        <img src=" ../assets/ rosy_icon.svg" alt="Rosy Icon"
          width="150">
-       <p> Твојата симпатична асистентка за квалитет е подготвена! </p>
+       <p> Мониторинг и анализа на производните процеси </p>
   </body>
 </html>
 
