--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@ Html
        <h1> Добредојде во Rosy Quality Center &#127800; </h1>
        <img src=" ../assets/ rosy_icon.svg" alt="Rosy Icon"
          width="150">
-       <p> Мониторинг и анализа на производните процеси </p>
+       <p> Мониторинг и анализа на производните процеси. Вашиот асистент ви стои на располагање </p>
   </body>
 </html>
 
